--- a/css/styles.css
+++ b/css/styles.css
@@ -65,14 +65,14 @@ section {
 }
 
 #maincontent {
-    background-color: #f3f3f3;
+    background-color: #eee;
     min-height: 100%;
 }
 
 #footer {
     background-color: #444;
-    color: #aaa;
-    font-size: 8pt;
+    color: #ededed;
+    font-size: 10pt;
     letter-spacing: 1px;
     padding: 25px;
     text-align: center;
@@ -114,12 +114,14 @@ nav h1 a {
 /* Display list items side by side */
 
 #breadcrumb li {
+    font-size: 23px;
     display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 
 #breadcrumb li + li:before {
+    font-size: 23px;
     padding: 8px;
     color: black;
     content: "/\00a0";
@@ -128,6 +130,7 @@ nav h1 a {
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
+    font-size: 23px;
     color: #0275d8;
     text-decoration: none;
 }
@@ -159,8 +162,8 @@ nav h1 a {
 
 .filter-options h2 {
     color: white;
-    font-size: 1rem;
-    font-weight: normal;
+    font-size: 20px;
+    font-weight: 700;
     line-height: 1;
     margin: 0 20px;
 }
@@ -211,10 +214,10 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-    color: #f18200;
+    color: #3397DB;
     font-family: Arial, sans-serif;
     font-size: 14pt;
-    font-weight: 200;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 1.3;
     margin: 20px 0 10px;
@@ -229,9 +232,10 @@ nav h1 a {
 #restaurants-list li a {
     background-color: orange;
     border-bottom: 3px solid #eee;
-    color: #fff;
+    color: #000;
     display: inline-block;
     font-size: 10pt;
+    font-weight: 400;
     margin: 15px 0 0;
     padding: 8px 30px 10px;
     text-align: center;
@@ -276,10 +280,10 @@ nav h1 a {
 }
 
 #restaurant-name {
-    color: #f18200;
+    color: #3397DB;
     font-family: Arial, sans-serif;
-    font-size: 20pt;
-    font-weight: 200;
+    font-size: 30pt;
+    font-weight: 700;
     letter-spacing: 0;
     margin: 15px 0 30px;
     text-transform: uppercase;
@@ -329,9 +333,9 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-    color: #f58500;
-    font-size: 24pt;
-    font-weight: 300;
+    color: #3397DB;
+    font-size: 32pt;
+    font-weight: 700;
     letter-spacing: -1px;
     padding-bottom: 1pt;
 }
